Feat(core): Basic Auth
